# jepa_graph

./: README.md  pyproject.toml
docs/: TRAINING_EXPLAINED.md
examples/: pretrain_jepa.py  train_stark_prime.py
src/jepa_graph/: __init__.py
src/jepa_graph/data/: __init__.py  dataset.py  masking.py  stark_prime.py  structural_encoding.py
src/jepa_graph/graphrag/: __init__.py  fusion.py  gretriever.py  pipeline.py  retriever.py
src/jepa_graph/models/: __init__.py  encoders.py  graph_jepa.py  predictor.py
src/jepa_graph/training/: __init__.py  losses.py  trainer.py
src/jepa_graph/utils/: __init__.py  metrics.py  visualization.py
